Tweaks, cleanup, and new kitty

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -7,8 +7,8 @@ section {
 }
 
 .kitty-chan {
-  width: 500px;
-  height: 300px;
+  width: 503px;
+  height: 403px;
   margin: 300px auto 0 auto;
-  background-image: url('http://placekitten.com/g/500/300');
+  background-image: url('/images/rainbows-cat.jpg');
 }
