initial visual tidying

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -2,8 +2,16 @@ h1 {
   margin: 1em 0 2em 1em;
 }
 
+body {
+	background: #f6f6f6;
+}
+
 section {
   margin: 0 1em;
+}
+
+body, section {
+	margin: 0;
 }
 
 .kitty-chan {
