font-face, axis label tidy

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -12,7 +12,7 @@
 @import "../components/tgm-bootstrap/less/mixins.less";
 
 // Grid system and page structure
-// @import "../components/tgm-bootstrap/less/scaffolding.less";
+@import "../components/tgm-bootstrap/less/scaffolding.less";
 // @import "../components/bootstrap/less/grid.less";
 // @import "../components/bootstrap/less/layouts.less";
 
