--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,5 +1,9 @@
 h1 {
-  margin: 1em 0 2em 1em;
+  margin: 1em 0 1em 1em;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2em;
+  line-height: 1;
 }
 
 body {
