note about election years

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -20,6 +20,11 @@
   margin: 0;
 }
 
+.viz-overview {
+	border-bottom: 1px solid @grayLighter;
+  margin: 0 1em;
+}
+
 
 h2 {
   margin: 1em 0 1em 1em;
@@ -34,7 +39,7 @@ body {
   	font-family: @sansFontFamily;
   	font-size: @baseFontSize; 
   	line-height: @baseLineHeight;
-	padding: 10px;
+	padding: 10px 0;
 }
 
 section {
@@ -50,7 +55,7 @@ body, section {
 
 .credit {
 margin: @baseLineHeight;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid @grayLighter;
   padding-top: @baseLineHeight - 1;
 }
 
