--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -50,6 +50,22 @@ body, section {
 	margin: 0;
 }
 
+.explainer {
+	text-align: center;
+	color: @grayLight;
+	font-size: @baseFontSize * 0.8;
+	// font-weight: bold;
+	// font-style: italic;
+	// margin: 0 0 @baseLineHeight * 1.5 63px;
+	margin: 0 0 @baseLineHeight * 1.5 0;
+	// padding: 0 0 @baseLineHeight 0;
+	em {
+		font-style: normal;
+		color: #333;
+
+	}
+}
+
 
 // footer
 
