--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -21,8 +21,11 @@
 }
 
 .viz-overview {
-	border-bottom: 1px solid @grayLighter;
+  border-bottom: 1px solid @grayLighter;
   margin: 0 1em;
+  p {
+    text-align: center;
+  }
 }
 
 
