--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -34,11 +34,11 @@
 
 
 h2 {
-  margin: 1em 0 1em 1em;
+  margin: 1em 0 0.5em 0;
   text-align: center;
   text-transform: uppercase;
-  font-size: 1.3em;
-  line-height: 1;
+  font-size: 1.5em;
+  line-height: 1.1;
 }
 
 body {
