--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -59,7 +59,7 @@ body, section {
 
 .explainer {
 	text-align: center;
-	color: @grayLight;
+	color: @gray;
 	font-size: @baseFontSize * 0.8;
 	font-weight: normal;
 	margin: 0 0 @baseLineHeight * 1.5 0;
